[package]
name = "miniplot"
version = "0.0.2"
edition = "2024"
description = "A simple plotting library for Rust, built on top of egui and eframe."
license = "MIT"
repository = "https://github.com/TomtheCoder2/miniplot"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
egui_plot = "0.34.1"
nalgebra = "0.34.1"